--- a/package.json
+++ b/package.json
@@ -14,9 +14,9 @@
     "@fortawesome/free-solid-svg-icons": "^6.1.1",
     "@fortawesome/react-fontawesome": "^0.1.18",
     "@reduxjs/toolkit": "^1.8.1",
-    "next": "12.1.5",
-    "react": "18.1.0",
-    "react-dom": "18.1.0",
+    "next": "^12.1.5",
+    "react": "^18.1.0",
+    "react-dom": "^18.1.0",
     "react-redux": "^8.0.1",
     "react-slick": "^0.29.0",
     "slick-carousel": "^1.8.1"
