--- a/package.json
+++ b/package.json
@@ -14,8 +14,10 @@
     "@fortawesome/free-solid-svg-icons": "^6.1.1",
     "@fortawesome/react-fontawesome": "^0.1.18",
     "@reduxjs/toolkit": "^1.8.1",
-    "firebase": "^9.8.4",
+    "bcryptjs": "^2.4.3",
+    "mongodb": "^4.8.0",
     "next": "^12.1.5",
+    "next-auth": "^4.10.0",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
     "react-redux": "^8.0.1",
